[streams-zip-codes] Compute average in Kafka Streams